# SupportFlow-AI

./: .gitignore  README.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-backend-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-SECURITY.md  01-SKELETON.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-tenant-workflow-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-knowledge-base-core/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ai-service-python/: Dockerfile  pyproject.toml
ai-service-python/app/: __init__.py  classifier.py  main.py  models.py  settings.py
ai-service-python/tests/: test_classification_api.py  test_classifier_rules.py  test_runtime_contract.py
backend-spring/: Dockerfile  mvnw  mvnw.cmd  pom.xml
docs/sdd/: phase-01-backend-foundation-api.md  phase-02-tenant-workflow-core-api.md  phase-03-knowledge-base-core-api.md  phase-04-ai-classification-integration-api.md
(+75 files in other folders)
