[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supportflow-ai-service"
version = "0.1.0"
description = "Deterministic ticket classification service for SupportFlow AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.136.3",
    "pydantic==2.13.4",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
